# flask_me

./: .gitignore  add_platform_test_comparison.py  check_achievements.py  check_all_achievements.py  check_flask_github.py  config.py  delete_achievements.py  final_verify_github.py  fix_github_url.py  init_db.py  init_db_script.py  migrate_db_add_checklist.py  migrate_db_add_checklist_status.py  migrate_db_add_lifecycle_type.py  migrate_test_upload.py  migrate_v2.py  pyproject.toml  render.yaml  requirements.txt  restore_and_delete.py  run.py  start.sh  test_connections.py  test_template_render.py  update_achievements_github.py  verify_final.py  workflow_executor.py  wsgi.py
app/: __init__.py  models.py
app/auth/: routes.py
app/main/: routes.py
app/templates/: achievements.html  api_automation_framework_detail.html  api_automation_frameworks.html  base.html  blockchain_functional.html  blockchain_home.html  blockchain_performance.html  blockchain_performance_detail.html  blockchain_test_detail.html  blockchain_tests.html  certificates.html  cex_contract_lifecycle.html  checklist_detail.html  checklist_form.html  checklist_home.html  home.html  login.html  performance_test_detail.html  performance_tests.html  permissions.html  projects.html  qa_qc_analyses.html  qa_qc_analysis_detail.html  register.html  resume.html  spot_trading_lifecycle.html  table_relationships.html  test_case_design_detail.html  test_case_designs.html  test_case_upload_module.html  test_processes.html  test_theories.html  test_theory_detail.html  test_type_detail.html  test_types.html  (+7 more)
(+7 files in other folders)
